// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders default 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      style="display: inline-flex; align-items: center;"
    >
      <button
        class="MuiButtonBase-root Button-small Button-secondaryBlue Button-root"
        tabindex="0"
        type="button"
      >
        <div
          class="Button-content"
          style="display: inline-flex; flex-direction: row; align-items: center;"
        >
          Prev
        </div>
      </button>
      <button
        class="MuiButtonBase-root Button-small Button-secondaryBlue Button-root Pagination-rangeButton"
        tabindex="0"
        type="button"
      >
        <div
          class="Button-content"
          style="display: inline-flex; flex-direction: row; align-items: center;"
        >
          1
        </div>
      </button>
      <div
        class="Pagination-ellipsis"
        style="display: block;"
      >
        <p
          class="MuiTypography-root Typography-bodySmall Typography-semibold Typography-black MuiTypography-body1"
        >
          ...
        </p>
      </div>
      <button
        class="MuiButtonBase-root Button-small Button-secondaryBlue Button-root Pagination-rangeButton"
        tabindex="0"
        type="button"
      >
        <div
          class="Button-content"
          style="display: inline-flex; flex-direction: row; align-items: center;"
        >
          4
        </div>
      </button>
      <button
        class="MuiButtonBase-root Button-small Button-primaryBlue Button-root Pagination-rangeButton"
        tabindex="0"
        type="button"
      >
        <div
          class="Button-content"
          style="display: inline-flex; flex-direction: row; align-items: center;"
        >
          5
        </div>
      </button>
      <button
        class="MuiButtonBase-root Button-small Button-secondaryBlue Button-root Pagination-rangeButton"
        tabindex="0"
        type="button"
      >
        <div
          class="Button-content"
          style="display: inline-flex; flex-direction: row; align-items: center;"
        >
          6
        </div>
      </button>
      <div
        class="Pagination-ellipsis"
        style="display: block;"
      >
        <p
          class="MuiTypography-root Typography-bodySmall Typography-semibold Typography-black MuiTypography-body1"
        >
          ...
        </p>
      </div>
      <button
        class="MuiButtonBase-root Button-small Button-secondaryBlue Button-root Pagination-rangeButton"
        tabindex="0"
        type="button"
      >
        <div
          class="Button-content"
          style="display: inline-flex; flex-direction: row; align-items: center;"
        >
          20
        </div>
      </button>
      <button
        class="MuiButtonBase-root Button-small Button-secondaryBlue Button-root"
        tabindex="0"
        type="button"
      >
        <div
          class="Button-content"
          style="display: inline-flex; flex-direction: row; align-items: center;"
        >
          Next
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`renders disabled 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      style="display: inline-flex; align-items: center;"
    >
      <button
        class="MuiButtonBase-root Button-small Button-secondaryDisabled Button-root MuiButtonBase-disabled"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <div
          class="Button-content"
          style="display: inline-flex; flex-direction: row; align-items: center;"
        >
          Prev
        </div>
      </button>
      <button
        class="MuiButtonBase-root Button-small Button-secondaryDisabled Button-root MuiButtonBase-disabled Pagination-rangeButton"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <div
          class="Button-content"
          style="display: inline-flex; flex-direction: row; align-items: center;"
        >
          1
        </div>
      </button>
      <div
        class="Pagination-ellipsis"
        style="display: block;"
      >
        <p
          class="MuiTypography-root Typography-bodySmall Typography-semibold Typography-black MuiTypography-body1"
        >
          ...
        </p>
      </div>
      <button
        class="MuiButtonBase-root Button-small Button-secondaryDisabled Button-root MuiButtonBase-disabled Pagination-rangeButton"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <div
          class="Button-content"
          style="display: inline-flex; flex-direction: row; align-items: center;"
        >
          4
        </div>
      </button>
      <button
        class="MuiButtonBase-root Button-small Button-primaryDisabled Button-root MuiButtonBase-disabled Pagination-rangeButton"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <div
          class="Button-content"
          style="display: inline-flex; flex-direction: row; align-items: center;"
        >
          5
        </div>
      </button>
      <button
        class="MuiButtonBase-root Button-small Button-secondaryDisabled Button-root MuiButtonBase-disabled Pagination-rangeButton"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <div
          class="Button-content"
          style="display: inline-flex; flex-direction: row; align-items: center;"
        >
          6
        </div>
      </button>
      <div
        class="Pagination-ellipsis"
        style="display: block;"
      >
        <p
          class="MuiTypography-root Typography-bodySmall Typography-semibold Typography-black MuiTypography-body1"
        >
          ...
        </p>
      </div>
      <button
        class="MuiButtonBase-root Button-small Button-secondaryDisabled Button-root MuiButtonBase-disabled Pagination-rangeButton"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <div
          class="Button-content"
          style="display: inline-flex; flex-direction: row; align-items: center;"
        >
          20
        </div>
      </button>
      <button
        class="MuiButtonBase-root Button-small Button-secondaryDisabled Button-root MuiButtonBase-disabled"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <div
          class="Button-content"
          style="display: inline-flex; flex-direction: row; align-items: center;"
        >
          Next
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`renders nothing for 0 pages 1`] = `
<div>
  <div
    class="Picasso-root"
  />
</div>
`;

exports[`renders nothing for 1 page 1`] = `
<div>
  <div
    class="Picasso-root"
  />
</div>
`;
